Update: Change email template

--- a/templates/email_template/email_verification.html
+++ b/templates/email_template/email_verification.html
@@ -22,7 +22,7 @@
         <td style="text-align: center">
           <img
             style="height: 71.64px; width: 71.64px; opacity: 0.3"
-            src="./lektore.svg"
+            src="https://lektore.netlify.app/assets/log.svg"
             alt=""
           />
         </td>
