--- a/templates/email_template/email_verificationn.html
+++ b/templates/email_template/email_verificationn.html
@@ -106,7 +106,7 @@ u + .em_body .em_full_wrap { width:100% !important; width:100vw !important;}
               <tr>
                 <td align="center" valign="top">
                 <a href="#" target="_blank" style="text-decoration:none;">
-                <img src="./lektore.svg" height="35" alt="Lektore" border="0" style="display:block; font-family:Arial, sans-serif; font-size:18px; line-height:25px; text-align:center; color:#1d4685; font-weight:bold; max-width:180px;" class="em_w150" /></a></td>
+                <img src="https://lektore.netlify.app/assets/log.svg" height="35" alt="Lektore" border="0" style="display:block; font-family:Arial, sans-serif; font-size:18px; line-height:25px; text-align:center; color:#1d4685; font-weight:bold; max-width:180px;" class="em_w150" /></a></td>
               </tr>
               <tr>
                 <td height="28" style="height:28px;" class="em_h20">&nbsp;</td>
