--- a/templates/email_template/email_verification.html
+++ b/templates/email_template/email_verification.html
@@ -29,7 +29,7 @@
         <tr>
             <td style="text-align: center">
                 <img
-                        style="display:block;height: 71.64px; width: 71.64px; opacity: 0.3"
+                        style="height: 71.64px; width: 71.64px; opacity: 0.3"
                         src="https://lektore.netlify.app/assets/log.svg"
                         alt=""
                 />
@@ -120,28 +120,28 @@
           "
             >
                 <div style="margin: 0 auto; vertical-align: center">
-{#                    <a style="text-align: center" href="#instagram"#}
-{#                    ><img#}
-{#                            style="#}
-{#                  height: 42px;#}
-{#                  width: 42px;#}
-{#                  transform: translate(-6px, 8px);#}
-{#                "#}
-{#                            src="./instagram-logo.png"#}
-{#                            alt="instagram-logo"#}
-{#                    /></a>#}
-{#                    <a style="text-align: center" href="#twitter"#}
-{#                    ><img#}
-{#                            style="height: 28px; width: 28px"#}
-{#                            src="./twitter-logo.png"#}
-{#                            alt="twitter-logo"#}
-{#                    /></a>#}
-{#                    <a style="text-align: center" href="#facebook"#}
-{#                    ><img#}
-{#                            style="max-height: 52px; max-width: 52px"#}
-{#                            src="./facebook-logo.png"#}
-{#                            alt="facebook-logo"#}
-{#                    /></a>#}
+                    <a style="text-align: center" href="#instagram"
+                    ><img
+                            style="
+                  height: 42px;
+                  width: 42px;
+                  transform: translate(-6px, 8px);
+                "
+                            src="./instagram-logo.png"
+                            alt="instagram-logo"
+                    /></a>
+                    <a style="text-align: center" href="#twitter"
+                    ><img
+                            style="height: 28px; width: 28px"
+                            src="./twitter-logo.png"
+                            alt="twitter-logo"
+                    /></a>
+                    <a style="text-align: center" href="#facebook"
+                    ><img
+                            style="max-height: 52px; max-width: 52px"
+                            src="./facebook-logo.png"
+                            alt="facebook-logo"
+                    /></a>
                 </div>
             </td>
         </tr>
