Update: Change email template

--- a/templates/email_template/email_verification.html
+++ b/templates/email_template/email_verification.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% autoescape off %}
 
     <!DOCTYPE html>
@@ -127,19 +128,19 @@
                   width: 42px;
                   transform: translate(-6px, 8px);
                 "
-                            src="./instagram-logo.png"
+                            src="https://lektore.netlify.app/assets/instagram-logo.png"
                             alt="instagram-logo"
                     /></a>
                     <a style="text-align: center" href="#twitter"
                     ><img
                             style="height: 28px; width: 28px"
-                            src="./twitter-logo.png"
+                            src="https://lektore.netlify.app/assets/twitter-logo.png"
                             alt="twitter-logo"
                     /></a>
                     <a style="text-align: center" href="#facebook"
                     ><img
                             style="max-height: 52px; max-width: 52px"
-                            src="./facebook-logo.png"
+                            src="https://lektore.netlify.app/assets/facebook-logo.png"
                             alt="facebook-logo"
                     /></a>
                 </div>
