Update: Change email template

--- a/templates/email_template/email_verification.html
+++ b/templates/email_template/email_verification.html
@@ -128,19 +128,19 @@
                   width: 42px;
                   transform: translate(-6px, 8px);
                 "
-                            src="https://lektore.netlify.app/assets/instagram-logo.png"
+                            src="https://res.cloudinary.com/debkncpwm/image/upload/v1670410898/instagram-logo_lh5peu.png"
                             alt="instagram-logo"
                     /></a>
                     <a style="text-align: center" href="#twitter"
                     ><img
                             style="height: 28px; width: 28px"
-                            src="https://lektore.netlify.app/assets/twitter-logo.png"
+                            src="https://res.cloudinary.com/debkncpwm/image/upload/v1670410898/twitter-logo_oyh0lj.png"
                             alt="twitter-logo"
                     /></a>
                     <a style="text-align: center" href="#facebook"
                     ><img
                             style="max-height: 52px; max-width: 52px"
-                            src="https://lektore.netlify.app/assets/facebook-logo.png"
+                            src="https://res.cloudinary.com/debkncpwm/image/upload/v1670410898/facebook-logo_ij3kuc.png"
                             alt="facebook-logo"
                     /></a>
                 </div>
